<resources>
    <string name="app_name">ObscuraLayout</string>
    <string name="text_profile">Profile</string>
    <string name="text_people">People</string>
    <string name="text_forum">Obscura</string>
    <string name="text_search">Search</string>
    <string name="text_chat">Chat</string>
    <string name="txt_et_hint_put_password">Password</string>
    <string name="txt_et_hint_put_email">Username</string>
    <string name="txt_btn_signin">SIGN IN</string>
    <string name="dialog_delete_text">Are you sure you want to log out?</string>
    <string name="dialog_delete_yes">Yes</string>
    <string name="dialog_delete_no">No</string>
</resources>
