<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:enabled="true"
        android:id="@+id/action_profile"
        android:icon="@mipmap/profile_active"
        android:title="@string/text_profile"
        />
    <item
        android:enabled="true"
        android:id="@+id/action_people"
        android:icon="@mipmap/people_active"
        android:title="@string/text_people"
        />
    <item
        android:enabled="true"
        android:id="@+id/action_forum"
        android:icon="@mipmap/obscuro_launch"
        android:title="@string/text_forum"
        />

    <item
        android:enabled="true"
        android:id="@+id/action_search"

        android:icon="@mipmap/search_active"
        android:title="@string/text_search"
        />
    <item
        android:enabled="true"
        android:id="@+id/action_chat"
        android:icon="@mipmap/chat_active"
        android:title="@string/text_chat"
        />
</menu>