<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_delete_tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/dialog_delete_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/deleteAccountText">
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialog_delete_tv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dialog_delete_yes"
            android:textColor="@color/commonHint">
        </TextView>
        <TextView
            android:id="@+id/dialog_delete_tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dialog_delete_no"
            android:textColor="@color/commonHint">
        </TextView>

    </LinearLayout>
</LinearLayout>