<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient"

    >
    <gradient
        android:id="@+id/gradient"
        android:startColor="#97a0e5"
        android:endColor="#6b499f"
        android:angle="225"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_sign_in_password"
        android:layout_width="@dimen/et_password_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_et_password"
        android:layout_marginLeft="@dimen/margin_left_et"
        android:clipToPadding="false"
        android:paddingBottom="13dp"
        android:paddingLeft="5dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_signin_password"
            android:layout_width="@dimen/et_password_width"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/signinTv"
            android:textColorHint="@color/signinTv"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="7sp"
            android:hint="@string/txt_et_hint_put_password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_signin_email"
        android:layout_width="@dimen/et_username_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_et"
        android:layout_marginTop="@dimen/margin_top_et_username"
        android:clipToPadding="false"
        android:paddingBottom="13dp"
        android:paddingLeft="5dp">


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_sign_in_email"
            android:layout_width="@dimen/et_username_width"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColorHint="@color/signinTv"
            android:textColor="@color/signinTv"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="7sp"
            android:hint="@string/txt_et_hint_put_email"

            />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_signin_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_tv_signin"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="-7sp"
        android:layout_marginLeft="@dimen/margin_left_tv_signin"
        android:layout_marginTop="@dimen/margin_top_tv_signin"
        android:text="@string/txt_btn_signin"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_signin_open_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_tv_up"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/signinTv"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="5sp"
        android:layout_marginLeft="@dimen/margin_left_btn_up"
        android:layout_marginTop="@dimen/margin_top_btn_up"
        android:text="/SIGN UP"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_signin_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#b3ffffff"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="5.5sp"
        android:layout_marginLeft="@dimen/margin_left_btn_forgot"
        android:layout_marginTop="@dimen/margin_top_btn_forgot"
        android:text="Forgot password?"
        />
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/btn_signin_google"
        android:layout_width="@dimen/iv_social_width"
        android:layout_height="@dimen/iv_social_heigth"
        android:background="@drawable/ic_launcher_background"
        android:layout_marginLeft="@dimen/margin_left_btn_google"
        android:layout_marginBottom="@dimen/margin_btn_social_bottom"
        android:layout_alignParentBottom="true"
        />



    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/btn_signin_facebook"
        android:layout_width="@dimen/iv_social_width"
        android:layout_height="@dimen/iv_social_heigth"
        android:background="@drawable/ic_launcher_background"
        android:layout_marginLeft="@dimen/margin_left_btn_facebook"
        android:layout_marginBottom="@dimen/margin_btn_social_bottom"
        android:layout_alignParentBottom="true"
        />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/btn_signin_twitter"
        android:layout_width="@dimen/iv_social_width"
        android:layout_height="@dimen/iv_social_heigth"
        android:background="@drawable/ic_launcher_background"
        android:layout_marginLeft="@dimen/margin_left_btn_twitter"
        android:layout_marginBottom="@dimen/margin_btn_social_bottom"
        android:layout_alignParentBottom="true"
        />
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_signin_enter"
        android:text="ENTER"
        android:layout_marginLeft="@dimen/margin_top_btn_enter_left"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginBottom="@dimen/margin_btn_enter_bottom"
        android:layout_alignParentBottom="true"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_signup_enter_arrow"
        android:layout_marginLeft="@dimen/margin_left_btn_enter_arrow"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="/"
        android:layout_marginBottom="@dimen/margin_btn_arrow_bottom"
        android:layout_alignParentBottom="true"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_signup_enter_arrow_up"
        android:layout_marginLeft="@dimen/margin_left_btn_enter_arrow"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="\"
        android:layout_marginBottom="@dimen/margin_btn_arrow_top"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>